finished draft section implementation

--- a/vignettes/SKG2020_submission/literature.bib
+++ b/vignettes/SKG2020_submission/literature.bib
@@ -158,3 +158,33 @@
     note = {R package version 1.4.1},
     url = {https://CRAN.R-project.org/package=pkgdown},
   }
+
+  @Book{rmarkdown,
+    title = {R Markdown: The Definitive Guide},
+    author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+    publisher = {Chapman and Hall/CRC},
+    address = {Boca Raton, Florida},
+    year = {2018},
+    note = {ISBN 9781138359338},
+    url = {https://bookdown.org/yihui/rmarkdown},
+  }
+
+  @misc{hasselbring2019fair,
+    title={FAIR and Open Computer Science Research Software},
+    author={Wilhelm Hasselbring and Leslie Carr and Simon Hettrick and Heather Packer and Thanassis Tiropanis},
+    year={2019},
+    eprint={1908.05986},
+    archivePrefix={arXiv},
+    primaryClass={cs.SE}
+}
+
+@Article{testthat,
+    author = {Hadley Wickham},
+    title = {testthat: Get Started with Testing},
+    journal = {The R Journal},
+    year = {2011},
+    volume = {3},
+    pages = {5--10},
+    url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
+  }
+
