add small corrections

--- a/vignettes/SKG2020_submission/skg2020_submission.Rmd
+++ b/vignettes/SKG2020_submission/skg2020_submission.Rmd
@@ -30,9 +30,9 @@ knitr::opts_chunk$set(
 
 OpenAIRE has collected and interlinked scholarly data from various openly available sources for over ten years. In December 2019, this European open science network released the OpenAIRE Research Graph Dump [@manghi_paolo_2019_3516918], a big scholarly dataset that comprises metadata about more than 100 million research publications and 18 million research datasets, as well as the relationships between them. These metadata are furthermore connected to open access locations and disambiguated information about persons, organisations and funders. 
 
-Like most big scholarly data dumps, the OpenAIRE Research Graph offers many data analytics opportunities, but working with it can be challenging for data science practitioners. One reason is the sheer size of the data release. Although the OpenAIRE Research Graph Dump is already split into several files, most of these data files are too large to fit the memory of a moderately equipped personal computer when directly imported into statistical computing environments. Another challenge is the format. Statistical methods require tidy data, i.e. datasets with a rectangular structure made up of unambiguous columns and rows [@Wickham_2014]. The dump, however, consists of compressed XML-files following the comprehensive OpenAIRE data model [@manghi_paolo_2019_2643199], from which only certain elements may be needed for a specific data analysis.
+Like most big scholarly data dumps, the OpenAIRE Research Graph offers many data analytics opportunities, but working with it can be challenging for data science practitioners. One reason is the sheer size of the data release. Although the OpenAIRE Research Graph Dump is already split into several files, most of these data files are too large to fit into the memory of a moderately equipped personal computer when directly imported into statistical computing environments. Another challenge is the format. Statistical methods require tidy data, i.e. datasets with a rectangular structure made up of unambiguous columns and rows [@Wickham_2014]. The dump, however, consists of compressed XML-files following the comprehensive OpenAIRE data model [@manghi_paolo_2019_2643199], from which only certain elements may be needed for a specific data analysis.
 
-In this paper, we will introduce the R package `openairegraph` that helps to transform the large OpenAIRE Research Graph Dump into relevant small datasets for analytical purposes. It aims at data science practitioners and researchers alike who wish to conduct their own statistical analysis using the OpenAIRE Research Graph, but are wary of handling its large data dumps.  Our implementation does not only consist of tools that allow to explore and parse specific information from the OpenAIRE Research Graph Dump. The R package structure also provides a standard way to ensure the computational reproducibility of these tools. To demonstrate the usefulness of our implementation, we will benchmark the open access activities of grant-supported projects affiliated with the University of Göttingen against the overall uptake across the funding activities in the European HORIZON 2020 funding programme.
+In this paper, we will introduce the R package {openairegraph} that helps to transform the large OpenAIRE Research Graph Dump into relevant small datasets for analytical purposes. It aims at data science practitioners and researchers alike who wish to conduct their own statistical analysis using the OpenAIRE Research Graph, but are wary of handling its large data dumps.  Our implementation does not only consist of tools that allow you to explore and parse specific information from the OpenAIRE Research Graph Dump. The R package structure also provides a standard way to ensure the computational reproducibility of these tools. To demonstrate the usefulness of our implementation, we will benchmark the open access activities of grant-supported projects affiliated with the University of Göttingen against the overall uptake across the funding activities in the European HORIZON 2020 funding programme.
 
 # Background
 
@@ -89,15 +89,15 @@ oaire_data <- future.apply::future_lapply(openaire_records,
 oaire_df <- dplyr::bind_rows(oaire_data)
 ```
 
-First, we obtained the locations of the de-coded XML records. After that, we read each XML file using the `xml2` [@xml2] package, and applied three parsers: `openairegraph::oarg_publications_md()`, `openairegraph::oarg_linked_projects()` and `openairegraph::oarg_linked_ftxt()`.  We used the `future` [@future] and `future.apply` [@future_apply] packages to enable reading and parsing these records simultaneously with multiple R sessions. Running code in parallel reduces the execution time. Finally, we put together the individually created datasets into one dataset.
+First, we obtained the locations of the de-coded XML records. After that, we read each XML file using the `xml2` [@xml2] package, and applied three parsers: `openairegraph::oarg_publications_md()`, `openairegraph::oarg_linked_projects()` and `openairegraph::oarg_linked_ftxt()`.  We used the {future} [@future] and `future.apply` [@future_apply] packages to enable reading and parsing these records simultaneously with multiple R sessions. Running code in parallel reduces the execution time. Finally, we put together the individually created datasets into one dataset.
 
-Documentation is an essential part of the R package workflow. For each parser, we described the usage, as well as the returned output. The latter is represented as data coding tables with an description of each variables, making it easier to grasp the otherwise complex data structure of the OpenAIRE Research Graph. While executable examples are provided for each function, an introductory vignette, an executable long-form documentation written in R Markdown[@rmarkdown], demonstrates a workflow using the package. All documentation is automatically rendered to an R manual, and to a package website that was built with `pkgdown` [@pkgdown].
+Documentation is an essential part of the R package workflow. For each parser, we described the usage, as well as the returned output. The latter is represented as data coding tables with an description of each variables, making it easier to grasp the otherwise complex data structure of the OpenAIRE Research Graph. While executable examples are provided for each function, an introductory vignette, an executable long-form documentation written in R Markdown[@rmarkdown], demonstrates a workflow using the package. All documentation is automatically rendered to an R manual, and to a package website that was built with {pkgdown} [@pkgdown].
 
-While writing the package, we collected exemplary OpenAIRE Research Graph records and tested our parser against these files. The package provides `testthat` [@testthat] unit testing for these cases to make sure that the parsers work as expected. Along with the general automated checking routines for the R package build, these tests will be executed on remote continuous integration services after code updates. The package is available via GitHub, and can be installed from it. Following good practices for research software citation and preservation, releases are archived with Zenodo, which issues DOIs for persistent identification. Altogether, this release workflow enables that the package is "both archived for reproducibility and actively maintained for reusability" [@hasselbring2019fair].
+While writing the package, we collected exemplary OpenAIRE Research Graph records and tested our parser against these files. The package provides {testthat} [@testthat] unit testing for these cases to make sure that the parsers work as expected. Along with the general automated checking routines for the R package build, these tests will be executed on a continuous integration services after every code updates. The package is available via GitHub, and can be installed from it. Following good practices for research software citation and preservation, releases are archived with Zenodo, which issues DOIs for persistent identification. Altogether, this release workflow enables that the package is "both archived for reproducibility and actively maintained for reusability" [@hasselbring2019fair].
 
 # Use-Case
 
-A main purpose of the OpenAIRE Research Graph, which links grants to publications and open access full-texts, is monitoring the efficacy of open access mandates. Here, we will demonstrate how to benchmark the compliance with the open access mandate of the European Commission’s HORIZON 2020 funding programme (H2020) against related funding activities using OpenAIRE data and our openairegraph package. We will focus on projects affiliated with the University of Göttingen. In doing so, we want to take into account that open access mandates generally lead to above-average open access uptake levels. Yet, they can vary by discipline and funding activity [@Larivi_re_2018].
+A main purpose of the OpenAIRE Research Graph, which links grants to publications and open access full-texts, is monitoring the efficacy of the open access mandates. Here, we will demonstrate how to benchmark the compliance with the open access mandate of the European Commission’s HORIZON 2020 funding programme (H2020) against related funding activities using OpenAIRE data and our openairegraph package. We will focus on projects affiliated with the University of Göttingen. In doing so, we want to take into account that open access mandates generally lead to above-average open access uptake levels. Yet, they can vary by discipline and funding activity [@Larivi_re_2018].
 
 ```{r}
 library(openairegraph)
@@ -197,11 +197,11 @@ ggplot(goe_oa, aes(funding_scheme, oa_prop)) +
 
 ```
 
-Figure 3 shows that many H2020-projects with University of Göttingen participation have an uptake of open access to grant-supported publications that is above the average in the peer group. At the same time, some perform below expectation. Together, this provides a valuable insight into open access compliance at the university-level, especially for research support staff who are in charge of helping grantees to make their work open access. They can, for instance, point grantees to OpenAIRE-compliant repositoires for self-archiving their works. 
+Figure 3 shows that many H2020-projects with University of Göttingen participation have an uptake of open access to grant-supported publications that is above the average in the peer group. At the same time, some perform below expectation. Together, this provides a valuable insight into open access compliance at the university-level, especially for research support staff who are in charge of helping grantees to make their work open access. They can, for instance, point grantees to OpenAIRE-compliant repositories for self-archiving their works. 
 
 # Discussion and Conclusion
 
-In summary, we have presented the R package openairegraph, and described how it helps data science practitioners working primarily in R to access and analyse the OpenAIRE Research Graph Dump. R packages, which follow a standardized structure including documentation and testing, are a well-established way to share code. R code is not limited to statistical methods, but can be also used to access various types of scholarly data sources. Wrapping helpers to work with the OpenAIRE Research Graph Dump into a R package, allows data science practitioners to explore this Scientific Knowledge Graph while shielding them from its complexity. As our use case has demonstrated, it furthermore provides a reliable way to investigate large variations in scholarly communication in a reproducible manner.
+In summary, we have presented the R package {openairegraph}, and described how it helps data science practitioners working primarily in R to access and analyse the OpenAIRE Research Graph Dump. R packages, which follow a standardized structure including documentation and testing, are a well-established way to share code. R code is not limited to statistical methods, but can be also used to access various types of scholarly data sources. Wrapping helpers to work with the OpenAIRE Research Graph Dump into a R package, allows data science practitioners to explore this Scientific Knowledge Graph while shielding them from its complexity. As our use case has demonstrated, it furthermore provides a reliable way to investigate large variations in scholarly communication in a reproducible manner.
 
 We are aware that not all data science practitioners use R. We encourage helpers for analysing big scholarly data dumps in other programming languages as well. Their implementation can draw from the standardized way how R packaging document, test and share code for statistical analyses. Such tools for statistical computing environments will likely improve re-use of Scientific Knowledge Graphs in quantitative science studies and decision-making.
 
