--- a/vignettes/SKG2020_submission/literature.bib
+++ b/vignettes/SKG2020_submission/literature.bib
@@ -188,3 +188,82 @@
     url = {https://journal.r-project.org/archive/2011-1/RJournal_2011-1_Wickham.pdf},
   }
 
+@article{Xia_2017,
+  doi = {10.1109/tbdata.2016.2641460},
+  url = {https://doi.org/10.1109%2Ftbdata.2016.2641460},
+  year = 2017,
+  month = {mar},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {3},
+  number = {1},
+  pages = {18--35},
+  author = {Feng Xia and Wei Wang and Teshome Megersa Bekele and Huan Liu},
+  title = {Big Scholarly Data: A Survey},
+  journal = {{IEEE} Transactions on Big Data}
+}
+
+@article{Hicks_2015,
+  doi = {10.1038/520429a},
+  url = {https://doi.org/10.1038%2F520429a},
+  year = 2015,
+  month = {apr},
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {520},
+  number = {7548},
+  pages = {429--431},
+  author = {Diana Hicks and Paul Wouters and Ludo Waltman and Sarah de Rijcke and Ismael Rafols},
+  title = {Bibliometrics: The Leiden Manifesto for research metrics},
+  journal = {Nature}
+}
+
+@book{wickham_2015,
+   url = {http://r-pkgs.had.co.nz/},
+   author = {Hadley Wickham},
+   year = 2015,
+   publisher = {O'Reilly Media},
+   title = {R packages}
+   }
+
+@article{Tippmann_2014,
+  doi = {10.1038/517109a},
+  year = 2014,
+  month = {dec},
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {517},
+  number = {7532},
+  pages = {109--110},
+  author = {Sylvia Tippmann},
+  title = {Programming tools: Adventures with R},
+  journal = {Nature}
+}
+
+@article{Marwick_2018,
+  doi = {10.1080/00031305.2017.1375986},
+  year = 2018,
+  publisher = {Informa {UK} Limited},
+  volume = {72},
+  number = {1},
+  pages = {80--88},
+  author = {Ben Marwick and Carl Boettiger and Lincoln Mullen},
+  title = {Packaging Data Analytical Work Reproducibly Using R (and Friends)},
+  journal = {The American Statistician}
+}
+
+@software{ropensci_2020_3749013,
+  author       = {rOpenSci and
+                  Brooke Anderson and
+                  Scott Chamberlain and
+                  Anna Krystalli and
+                  Lincoln Mullen and
+                  Karthik Ram and
+                  Noam Ross and
+                  Maëlle Salmon and
+                  Melina Vidoni},
+  title        = {ropensci/dev\_guide: Fourth release},
+  month        = apr,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {0.4.0},
+  doi          = {10.5281/zenodo.3749013},
+  url          = {https://doi.org/10.5281/zenodo.3749013}
+}
